[metadata]
name = openstack-ideas
summary = OpenStack Ideas
description-file =
    README.rst
author = Jean-Philippe Evrard
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True
